# kawara

./: dune-project
lib/cbindings/: cbindings.ml  dune  xcb.ml
lib/cbindings/config/: discover.ml  dune
lib/cbindings/core/: caml_xcb.c  ewmh.ml  xcb.ml
lib/libkawara/: dune  layout.ml  libkawara.ml  orientation.ml  rectangle.ml  tree.ml
